# ecs

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  profile
.github/workflows/: ci.yaml
src/: CMakeLists.txt  main.c  main.cpp
